# sccd

./: .gitignore  .project  .pydevproject  README.md  code_generation.txt  notes.txt  sccd.xsd  schema.xml  shell.nix
bsml_features/: README.md  bsml.cfr
csharp_runtime/: sccdlib.sln
csharp_sccd_compiler/: csharp_sccd_compiler.sln
csharp_tests/: csharp_tests.sln
doc/: index.rst  language_features.rst  make.bat  sockets.rst
doc/_static/: mystyle.css
examples/: Makefile
examples/HTTP_client/: Makefile  client.py  make.bat  run_client.py
examples/HTTP_server/: make.bat  run_echo_server.py  server.py  socket2event.py
examples/bouncingballs/: Makefile
examples/chatclient/: model_chatclient.xml  readme.txt  run_client.py  run_server.py
examples/chatroom/: chatclient.xml  chatserver.xml  chatwindowGUI.py  run_client.py  run_server.py  scrollable_frame.py  (+1 more)
examples/digitalwatch/webassembly/codegen/: Cargo.toml  digitalwatch.rs
examples/digitalwatch/webassembly/wasm/: Cargo.toml  lib.rs  outputhandler.js
examples/digitalwatch/webassembly/wasm/pkg/: dwatch.d.ts  dwatch.js  dwatch_bg.js  dwatch_bg.wasm  dwatch_bg.wasm.d.ts  package.json
python/: setup.sh
python_runtime/: tkinter_eventloop.py
python_sccd_compiler/: sccd_constructs.py  sccdc.py  state_linker.py  stateful_writer.py
rust/: .gitignore  Cargo.toml  README.txt
src/: MANIFEST.in  setup.py  setup.sh
tanks/: AITank.py  Tank.py  TanksGame.py
test/: Makefile  README.md  legacy_render.py  legacy_test.py  render.py  render.sh  render2.py  run_tests.html  run_tests.py  sccd_to_cat.xsl  sccd_to_smcat.xsl  test.py  test2.py  test_demo.xml
tests/: run_tests.html  run_tests.py  test_framework.js
textualnotations/: .project  __init__.py  bouncing_balls.py  log.txt  mvk_loader.py  sccd_asg_mapper.py  sccd_grammar.g  sccd_to_xml.py  sccd_to_xml_JS.py  sccd_to_xml_PY.py  sccdtnc.py  trafficlight.sccd
unity_editor/: unity_editor.sln
(+943 files in other folders)
