[package]
name = "wasm"
version = "0.1.0"
edition = "2018"

[dependencies]
digitalwatch = { path = "../codegen" }
sccd = { path = "/home/maestro/thesis/repos/SCCD/src/sccd/../../rust" }
wasm-bindgen = "^0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
# wee_alloc = { version = "0.4.5", optional = true }

[lib]
name = "dwatch"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = 3