[package]
name = "wasm"
version = "0.1.0"
edition = "2018"

[dependencies]
digitalwatch = { path = "../codegen" }
sccd = { path = "/home/maestro/thesis/repos/SCCD/src/sccd/../../rust" }
wasm-bindgen = "0.2"

[lib]
name = "dwatch"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 3